--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
   docker:
     strategy:
       matrix:
-        version: [8.1, 8.2, 8.3, 8.4]
+        version: [8.1, 8.2, 8.3]
         variant: [debug, release]
     runs-on: ubuntu-latest
     steps:
